--- a/drupal/.ddev/commands/web/install
+++ b/drupal/.ddev/commands/web/install
@@ -4,6 +4,7 @@
 ## Usage: install
 ## Example: "ddev install"
 
+composer install
 drush tome:install -y
 drush php-eval 'node_access_rebuild();'
 drush cache:rebuild
